0.0.7 2019-09-xx
    - [LibXML::SAX::Handler::SAX2] replace .finish method with .publish
0.0.6 2019-09-10
    - [LibXML::Native] Change cglobals from constants to subs (avoid compilation failures #16)
    - [LibXML::Native::Defs] rename library constants LIB -> XML2, BIND-LIB -> BIND-XML2; add CLIB for windows.
0.0.5 2019-09-08
    - [LibXML::Reader]
      -- fix get/set of parser options #20
      -- implement .setParserProp method
    - [LibXML::XPath:::Context] - imnproved error handling
    - reduced displayed errors in test suite #19
0.0.4 2019-09-06
    - [LibXML::Node] remove custom native accessor
    - drop min supported libxml version from v2.09.00 to v2.08.00
    - skip too successful 'comment' test for open issue #18 (segfaulting)
0.0.3 2019-09-05
    - [src/xml6_ref.6] fix 'uint' compilation error #16
    - [META6.json] fix source URL #17
0.0.2 2019-09-04
    - [LibXML::Node] adopt LibXML::Element associative interface. Fix
      handling of '#text', '#comment' and '#cdata' DOM classes (which
      can be returned by the .keys method).
    - [LibXML::Node::List] optimisations to .AT-POS method
    - [LibXML::Node::Set] rename .push method to .add
    - [LibXML::Reader] add missing :!network option. Fix unintended
      network fetch of an external Dtd in 40reader_mem_error.t
0.0.1 2019-09-03
    Initial release